--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/main.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -15,7 +16,18 @@
 
         <div class="wrapper">
             <ul>
-                <li class="task-item" v-for="task in tasks" :class="task.done ? 'done' : '' "> {{task.text}} </li>
+
+                <!--task-->
+                <li class="task-item" v-for="(task, index) in tasks" :class="task.done ? 'done' : '' "> 
+
+                    <!--nome task-->
+                    <div class="mx-2">{{task.text}}</div>
+
+                    <!--delete task-->
+                    <div class="mx-2 delete-todo" @click="deleteTask(index)"><i class="fa-solid fa-x "></i></div>
+
+                </li>
+
             </ul>
         </div>
 
