--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,53 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/main.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
 
     <div id="app">
 
-        <div class="wrapper">
-            <ul>
+        <div class="d-flex justify-content-center align-items-center flex-column vh-100">
+            <div class="wrapper">
 
-                <!--task-->
-                <li class="task-item" v-for="(task, index) in tasks" :class="task.done ? 'done' : '' "> 
+                <h1 class="my-3">Todo List</h1>
 
-                    <!--nome task-->
-                    <div class="mx-2">{{task.text}}</div>
+                <!--input-->
+                <div class="my-input input-group mb-3">
+                    <input v-model="newTask.text" type="text" class="form-control" placeholder="New Task" aria-label="New Task"
+                        aria-describedby="button-addon2">
+                    <button class="btn btn-outline-primary" type="button" id="button-addon2" @click="addTask()">
+                        Add Task
+                    </button>
+                </div>
 
-                    <!--delete task-->
-                    <div class="mx-2 delete-todo" @click="deleteTask(index)"><i class="fa-solid fa-x "></i></div>
+                <hr>
 
-                </li>
+                <ul class="p-0">
 
-            </ul>
+                    <!--task-->
+                    <li class="task-item" v-for="(task, index) in tasks" :class="task.done ? 'done' : '' ">
+
+                        <!--nome task-->
+                        <div class="mx-2">{{task.text}}</div>
+
+                        <!--delete task-->
+                        <div class="mx-2 delete-todo" @click="deleteTask(index)"><i class="fa-solid fa-x "></i></div>
+
+                    </li>
+
+                </ul>
+            </div>
         </div>
 
+
     </div>
-    
+
 </body>
+
 </html>
